# StockPilot

./: .gitignore  README.md  daily_report.py  dashboard.py  pyproject.toml  requirements.txt
config/: portfolio.yaml  settings.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  RULES.md  TASKS.md
reports/: history.csv
reports/daily/: 2026-06-25.md  2026-06-26.md  2026-06-27.md
stock_pilot/: __init__.py  ai_summary.py  analyzer.py  fetcher.py  indicators.py  logging_config.py  market_session.py  models.py  notification.py  pipeline.py  portfolio.py  portfolio_decision.py  position_manager.py  reporter.py  scanner.py  scorer.py  settings.py  strategy.py
tests/: test_ai_summary.py  test_analyzer.py  test_dashboard.py  test_fetcher.py  test_indicators.py  test_market_session.py  test_notification.py  test_pipeline.py  test_portfolio.py  test_portfolio_decision.py  test_portfolio_valuation.py  test_position_manager.py  test_reporter.py  test_scanner.py  test_scorer.py  test_settings.py  test_strategy.py
